# Game2d

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  MetroidGame.cpp  MetroidGame.sln  MetroidGame.vcxproj  MetroidGame.vcxproj.filters  README.md  install_ndk.sh  local.properties  raycast.h  settings.gradle.kts  Текущие проблемы проекта.txt
GuiLib/: GuiLib.cpp  GuiLib.h  GuiLib.vcxproj  GuiLib.vcxproj.filters  gui_elements.cpp  gui_elements.h  pch.h
Utils/: Utils.h  Utils.vcxproj  Utils.vcxproj.filters  concepts.h  convert.cpp  convert.h  custom_warning.h  fps.cpp  fps.h  path.cpp  path.h  pch.h  print.cpp  print.h  types.h  with_default_value.h
app/: build.gradle.kts
app/src/androidTest/java/com/example/gameandroidport/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/gameandroidport/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gameandroidport/: ExampleUnitTest.java
content/configs/: window.conf
content/entity/player/: animations.json
content/entity/player/Pixelorama_Proj/: PlayerCrouchFrame1.pxo  PlayerCrouchFrame2.pxo  PlayerFlying.pxo  PlayerInQuickSand.pxo  PlayerMoveFrame2.pxo  PlayerStill.pxo
content/maps/: test.level  test2.json
content/textures/: textures.json
dependencies/GuiLib/: CMakeLists.txt  GuiLib.cpp  GuiLib.h  gui_elements.cpp  gui_elements.h  pch.h
dependencies/Utils/: CMakeLists.txt  Utils.h  concepts.h  convert.h  custom_warning.h  fps.cpp  fps.h  path.cpp  path.h  pch.h  print.cpp  print.h  types.h  types_comparing.h  with_default_value.h
gradle/wrapper/: gradle-wrapper.properties
src/: ammo.cpp  animation.cpp  base_object.cpp  basic_gun.cpp  dummy.cpp  entity.cpp  game.cpp  game_object.cpp  interactive_object.cpp  inventory.cpp  light_system.cpp  map.cpp  medkit.cpp  player.cpp  projectile.cpp  raycast.cpp  rgba.cpp  texture.cpp  vector.cpp  wall.cpp  window.cpp
src/headers/: ammo.h  animation.h  background_sprite.h  base.h  base_object.cpp  base_object.h  basic_gun.h  dummy.h  entity.h  game.h  game_object.h  interactive_object.h  inventory.h  light_system.h  map.h  map_interaction.h  medkit.h  player.h  projectile.h  raycast.h  rgba.h  texture.h  vector.h  wall.h  window.h
